# napari-detectron2

./: LICENSE  README.md  _version.py  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
examples/: demo.py
napari_detectron2/: __init__.py  _visualizer.py  _visualizer_2.py  _visualizer_3.py
napari_detectron2/_tests/: test_dock_widget.py
