[metadata]
name = napari-detectron2

author = Nicholas Sofroniew
author_email = sofroniewn@gmail.com
license = BSD-3-Clause
url = https://github.com/sofroniewn/napari-detectron2
description = A napari plugin that exposes detectron2 functionality
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/sofroniewn/napari-detectron2/issues
    Documentation = https://github.com/sofroniewn/napari-detectron2#README.md
    Source Code = https://github.com/sofroniewn/napari-detectron2
    User Support = https://github.com/sofroniewn/napari-detectron2/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-detectron2 = napari_detectron2
